<resources>
    <string name="app_name">MoiMusic</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="draw_open">打开抽屉</string>
    <string name="draw_close">关闭抽屉</string>
    <string name="groom">推荐</string>
    <string name="logIn">登录</string>
    <string name="logup">注册</string>
    <string name="trends">动态</string>
    <string name="animation">动漫</string>
    <string name="original">原创</string>
    <string name="user_center">个人中心</string>
    <string name="home_page">首页</string>
    <string name="history">历史记录</string>
    <string name="follow">关注</string>
    <string name="my_music_list">我的歌单</string>
    <string name="music_list">歌单</string>
    <string name="out">退出应用</string>
    <string name="inputphone">输入手机号</string>
    <string name="input_password">输入密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="verification_code">短信验证码</string>
    <string name="show_password">显示密码</string>
    <string name="send_msg_succ">短信发送成功</string>
    <string name="re_send">重新发送</string>
    <string name="re_send_s">秒后重新发送</string>
    <string name="log_up_succ">注册成功</string>
    <string name="log_in_succ">登录成功</string>
    <string name="please_input_right_message">请输入正确的信息</string>
    <string name="errorPhone">手机号格式错误</string>
    <string name="inputRightPassword">请输入6-20位密码</string>
    <string name="OK">确定</string>
    <string name="frendlyhint">温馨提示</string>
    <string name="frendlyhint_content">如果忘记密码，请在注册页面用手机号重新注册，我们会保留该手机号对应账户的所有内容</string>
    <string name="list_like">收藏的歌单</string>
    <string name="list_create">创建的歌单</string>
    <string name="no_data">没有数据</string>
    <string name="unknow_error">未知错误</string>
    <string name="message">消息</string>
    <string name="ReleaseTheSong">发布歌单</string>
    <string name="CollageTheList">收藏歌单</string>
    <string name="EditTheList">编辑歌单</string>
    <string name="music">歌曲</string>
    <string name="reply">评论</string>
    <string name="saySomething">说点什么</string>
    <string name="notLog">你还没登陆呢，先登录吧。</string>
    <string name="sendSuccess">发送成功</string>
    <string name="name">昵称</string>
    <string name="userIntroduce">个人介绍</string>
    <string name="boy">汉子</string>
    <string name="girl">妹子</string>
    <string name="birthday">出生日期</string>
<string name="editImage">修改头像</string>
    <string name="userInfoUpdataSucc">用户信息更新成功</string>
    <string name="createList">新建歌单</string>
    <string name="cancel">取消</string>
    <string name="noEmp">名字不能为空</string>
    <string name="thisIsListYouNotRelease">这个歌单你不能发布</string>
    <string name="thisIsListYouNotEdit">这个歌单你不能修改</string>
    <string name="ownListNotCollege">不能收藏自己的歌单哟</string>
    <string name="CollegeSuccess">收藏成功</string>
    <string name="followSuccess">关注用户成功啦</string>
    <string name="unfollowSuccess">已经成功取消关注啦</string>
    <string name="ShowPermission">检测到你没有开启必要的权限,MOI没有这些权限无法运行哦,请在弹出框里面授予MOI权限</string>
    <string name="failOpenPermission">权限开启失败,请转到应用设置,手动开启权限</string>
    <string name="sureTODeleteList">是否要删除歌单?</string>
    <string name="MusicListPlace">歌单广场</string>
    <string name="HotMusic">热门歌曲</string>
    <string name="HotMusicList">热门歌单</string>
    <string name="NewMusic">最新歌曲</string>
    <string name="TimeLine">时间线</string>
    <string name="hotTrends">热门动态</string>
    <string name="friendTrends">好友动态</string>
    <string name="shareList">分享歌单</string>
    <string name="shareMusic">分享歌曲</string>
    <string name="searchSinger">查找歌手</string>
    <string name="collegeMusic">收藏歌曲</string>
    <string name="search">搜索</string>
    <string name="singer">歌手</string>
    <string name="user">用户</string>

</resources>
