<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


<com.zhy.android.percent.support.PercentRelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.zhy.android.percent.support.PercentRelativeLayout
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/log_up_phone"
        android:hint="@string/inputphone"
        app:layout_widthPercent="70%w"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

    <EditText
        android:maxLength="11"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>
            <com.gc.materialdesign.views.ButtonFlat
                android:layout_alignParentRight="true"
                app:layout_widthPercent="30%w"
                android:layout_width="0dp"
                android:id="@+id/log_up_button"
                android:layout_height="58dp"
                android:background="@color/colorAccent"
                android:text="@string/get_verification_code" />
        <android.support.design.widget.TextInputLayout
            android:layout_below="@+id/log_up_phone"
            android:id="@+id/log_up_yanzheng"
            android:hint="@string/verification_code"
            app:layout_widthPercent="100%w"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <EditText
                android:maxLength="6"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_below="@+id/log_up_yanzheng"
            android:id="@+id/log_up_password"
            android:hint="@string/input_password"
            app:layout_widthPercent="100%w"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <EditText
                android:maxLength="20"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:layout_below="@+id/log_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.rey.material.widget.CheckBox
                android:textColor="@color/greywhite"
                android:gravity="center"
                android:text="@string/show_password"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/log_up_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <com.rey.material.widget.ProgressView
            android:id="@+id/progress"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:pv_autostart="true"
            app:pv_circular="true"
            app:pv_progressStyle="@style/Material.Drawable.CircularProgress"
            app:pv_progressMode="indeterminate"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </com.zhy.android.percent.support.PercentRelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</com.zhy.android.percent.support.PercentRelativeLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/sign_up_float"
        android:src="@mipmap/ic_done_white_24dp"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
 />
</android.support.design.widget.CoordinatorLayout>