<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v4.widget.NestedScrollView
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/log_in_username"
                android:hint="@string/inputphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:maxLength="11"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="16dp"
                android:layout_below="@+id/log_in_username"
                android:id="@+id/log_in_password"
                android:hint="@string/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:maxLength="20"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>
            <RelativeLayout
                android:layout_below="@+id/log_in_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/forget"
                    android:text="@string/forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
            <com.rey.material.widget.ProgressView
                android:id="@+id/progress"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:pv_autostart="true"
                app:pv_circular="true"
                app:pv_progressStyle="@style/Material.Drawable.CircularProgress"
                app:pv_progressMode="indeterminate"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/login"
        android:src="@mipmap/ic_done_white_24dp"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</android.support.design.widget.CoordinatorLayout>